updated background color
Changed background of body

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {background-image: url(Skateboard.jpg);}
+body {background-color: bisque;}
 table {border:2x solid blue; padding: 20px;}
 p {border: 1px solid blue ; padding: 20px;}
 p1 {background-color: black;}
