--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,4 @@ p {border: 1px solid blue ; padding: 20px;}
 p1 {background-color: black;}
 p1 {color: white;}
 header {border: 1px solid blue; padding: 20px;}
-::selection{color: green;}
+::selection{background-color: green;}
