--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {background-color: bisque;}
+body {background: linear-gradient(to right,blue,bisque,orange,green,purple)  bisque;}
 table {border:2x solid blue; padding: 20px;}
 p {border: 1px solid blue ; padding: 20px;}
 p1 {background-color: black;}
