--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,39 @@
-body {background-color: bisque;}
-table {border:2x solid blue; padding: 20px;}
-p {border: 1px solid blue ; padding: 20px;}
-p1 {background-color: black;}
-p1 {color: white;}
-header {border: 1px solid blue; padding: 20px;}
-::selection{background-color: green;}
+body {
+    background-color: whitesmoke;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    cursor: default;
+}
+p {
+    border: 2px solid blue;
+    padding: 20px;
+    margin: 50px 100px;
+    background-color:
+    aqua; text-align: left;
+}
+p1 {
+    background-color: black;
+    color: white;
+}
+header {
+    border: 2px solid blue;
+    padding: 20px;
+    background-color: aqua;
+    text-align:center;
+    position: fixed;
+}
+::selection{background-color: yellow;}
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+a:visited {
+    color: red;
+    text-decoration: none;
+}
+a:hover {
+    color: green;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+
