--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-    background-color: whitesmoke;
+    background-color: silver;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     cursor: default;
 }
-p {
+p{
     border: 2px solid blue;
     padding: 20px;
     margin: 50px 100px;
@@ -16,7 +16,7 @@ p1 {
 }
 header {
     border: 2px solid blue;
-    padding: 20px;
+    padding: 5px 10px;
     background-color: aqua;
     text-align:center;
     position: fixed;
@@ -35,5 +35,6 @@ a:hover {
     text-decoration: underline;
     cursor: pointer;
 }
-
-
+h1 {
+    margin: 5px 5px;
+}
